Fixed small bug that added extra whitespace to bottom of homepage

--- a/app/assets/stylesheets/royal.css
+++ b/app/assets/stylesheets/royal.css
@@ -72,7 +72,7 @@
 }
 .fullWidth {
   max-width: 5000px;
-  margin: 0 auto 24px;
+  margin: 0 auto 0px;
 }
 
 @media screen and (min-width:960px) and (min-height:660px) {
